[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/weapons/bombs/bomb.png" type="Texture" id=1]
[ext_resource path="res://scenes/Weapons/Bomb/Bomb.gd" type="Script" id=2]
[ext_resource path="res://assets/art/shapes/circle.png" type="Texture" id=3]
[ext_resource path="res://assets/particles/explosion.tres" type="Material" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 193.093

[sub_resource type="CircleShape2D" id=3]
radius = 73.0616

[sub_resource type="CircleShape2D" id=4]
radius = 165.003

[node name="Bomb" type="RigidBody2D" groups=["throwable", "weapons"]]
collision_layer = 2
collision_mask = 2
contact_monitor = true
angular_damp = 20.0
script = ExtResource( 2 )
type = "smoke"

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="particles" type="Particles2D" parent="."]
emitting = false
amount = 500
lifetime = 0.1
one_shot = true
explosiveness = 0.8
randomness = 0.9
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="ExplosionArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="smoke" type="Node2D" parent="."]
z_index = 999

[node name="smoke" type="RigidBody2D" parent="smoke" groups=["debri"]]
visible = false
collision_layer = 8388608
collision_mask = 8388608
angular_velocity = 5.0
angular_damp = 0.0

[node name="sprite" type="Sprite" parent="smoke/smoke"]
show_behind_parent = true
scale = Vector2( 7.04, 7.25 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="smoke/smoke"]
shape = SubResource( 3 )

[node name="PoisonArea" type="Area2D" parent="smoke/smoke"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="smoke/smoke/PoisonArea"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="smoke"]
autostart = true

[connection signal="body_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
[connection signal="timeout" from="smoke/Timer" to="." method="_on_Timer_timeout"]
